[gd_scene load_steps=71 format=3 uid="uid://w5k8dybp15gv"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_rtbyy"]
[ext_resource type="Texture2D" uid="uid://dt6d4r0346suj" path="res://src/player/assets/Yoh.png" id="2_ek52t"]
[ext_resource type="Script" path="res://src/utils/state_machine.gd" id="3_vwji7"]
[ext_resource type="Script" path="res://src/player/states/Idle.gd" id="4_rsswh"]
[ext_resource type="Script" path="res://src/player/states/Run.gd" id="5_caqt1"]
[ext_resource type="Script" path="res://src/player/states/Drift.gd" id="6_4yc7k"]
[ext_resource type="Script" path="res://src/player/Sitting.gd" id="7_er8qf"]
[ext_resource type="Script" path="res://src/player/states/Rise.gd" id="8_ixukc"]
[ext_resource type="Script" path="res://src/player/states/Jump.gd" id="9_7ik2k"]
[ext_resource type="Script" path="res://src/player/states/Fall.gd" id="9_iknwe"]
[ext_resource type="Script" path="res://src/player/states/Land.gd" id="10_k2cgt"]
[ext_resource type="Script" path="res://src/player/states/Attack1.gd" id="11_xkf3w"]
[ext_resource type="Script" path="res://src/player/states/Attack2.gd" id="12_sceus"]
[ext_resource type="Script" path="res://src/player/Attack3.gd" id="13_xyy0k"]
[ext_resource type="Script" path="res://src/player/states/SitAttack.gd" id="14_gq3kd"]

[sub_resource type="Animation" id="Animation_kgfjy"]
resource_name = "Attack"
length = 0.24
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Attack1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.24),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_attack1"
}]
}

[sub_resource type="Animation" id="Animation_n7e07"]
resource_name = "Attack2"
length = 0.33
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Attack2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.32),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_attack2"
}]
}

[sub_resource type="Animation" id="Animation_4oann"]
resource_name = "Attack3"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [37, 38, 39, 40, 41, 42]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Attack3")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_attack3"
}]
}

[sub_resource type="Animation" id="Animation_sc8n3"]
resource_name = "Drift"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 12, 13]
}

[sub_resource type="Animation" id="Animation_demoe"]
resource_name = "Fall"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_4x480"]
resource_name = "Idle"
length = 0.88
loop_mode = 1
step = 0.22
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.22, 0.44, 0.66),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_btxg2"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(8, 1), Vector2i(9, 1), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_r8i0k"]
resource_name = "Land"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 2), Vector2i(5, 2), Vector2i(9, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Land")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_landing"
}]
}

[sub_resource type="Animation" id="Animation_4rola"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 2)]
}

[sub_resource type="Animation" id="Animation_s1opt"]
resource_name = "Rise"
length = 0.06
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(8, 1), Vector2i(9, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Rise")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_rising"
}]
}

[sub_resource type="Animation" id="Animation_f601f"]
resource_name = "Run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_umqts"]
resource_name = "Sit"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Sit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_sitting"
}]
}

[sub_resource type="Animation" id="Animation_pl6w6"]
resource_name = "SitAttack"
length = 0.25
step = 0.042
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.042, 0.084, 0.126, 0.168, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46, 47, 48]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/SitAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.252),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_finished_sit_attack"
}]
}

[sub_resource type="Animation" id="Animation_r1h47"]
resource_name = "Sitting"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hluul"]
_data = {
"Attack": SubResource("Animation_kgfjy"),
"Attack2": SubResource("Animation_n7e07"),
"Attack3": SubResource("Animation_4oann"),
"Drift": SubResource("Animation_sc8n3"),
"Fall": SubResource("Animation_demoe"),
"Idle": SubResource("Animation_4x480"),
"Jump": SubResource("Animation_btxg2"),
"Land": SubResource("Animation_r8i0k"),
"RESET": SubResource("Animation_4rola"),
"Rise": SubResource("Animation_s1opt"),
"Run": SubResource("Animation_f601f"),
"Sit": SubResource("Animation_umqts"),
"SitAttack": SubResource("Animation_pl6w6"),
"Sitting": SubResource("Animation_r1h47")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_psd26"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fxdgs"]
animation = &"Attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i15ru"]
animation = &"Attack3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jpjsk"]
animation = &"Drift"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ucbm6"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4bq38"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ejj8j"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_amrwe"]
animation = &"Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bs3j8"]
animation = &"Rise"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xypoi"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6mw6b"]
animation = &"Sit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x0dcr"]
animation = &"SitAttack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d7oa2"]
animation = &"Sitting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cykj4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u8aib"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t8bvo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_atwf1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j27ct"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bvqm4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vqg2s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urdo6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_80xrd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hfcne"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hngjr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3o6dh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mwlgo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_74ftq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0egup"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_38hdb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_grmfm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vu0i4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8tp3d"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_txfrw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kma0b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3mnft"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xabnw"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_m0ebo"]
states/Attack/node = SubResource("AnimationNodeAnimation_psd26")
states/Attack/position = Vector2(468, 241)
states/Attack2/node = SubResource("AnimationNodeAnimation_fxdgs")
states/Attack2/position = Vector2(610, 241)
states/Attack3/node = SubResource("AnimationNodeAnimation_i15ru")
states/Attack3/position = Vector2(737, 241)
states/Drift/node = SubResource("AnimationNodeAnimation_jpjsk")
states/Drift/position = Vector2(468, 40)
states/Fall/node = SubResource("AnimationNodeAnimation_ucbm6")
states/Fall/position = Vector2(248, -35)
states/Idle/node = SubResource("AnimationNodeAnimation_4bq38")
states/Idle/position = Vector2(366, 129)
states/Jump/node = SubResource("AnimationNodeAnimation_ejj8j")
states/Jump/position = Vector2(248, 40)
states/Land/node = SubResource("AnimationNodeAnimation_amrwe")
states/Land/position = Vector2(366, -35)
states/Rise/node = SubResource("AnimationNodeAnimation_bs3j8")
states/Rise/position = Vector2(248, 241)
states/Run/node = SubResource("AnimationNodeAnimation_xypoi")
states/Run/position = Vector2(624, 129)
states/Sit/node = SubResource("AnimationNodeAnimation_6mw6b")
states/Sit/position = Vector2(248, 158)
states/SitAttack/node = SubResource("AnimationNodeAnimation_x0dcr")
states/SitAttack/position = Vector2(-10, 158)
states/Sitting/node = SubResource("AnimationNodeAnimation_d7oa2")
states/Sitting/position = Vector2(126, 158)
states/Start/position = Vector2(74, 69)
transitions = ["Idle", "Run", SubResource("AnimationNodeStateMachineTransition_cykj4"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_u8aib"), "Run", "Drift", SubResource("AnimationNodeStateMachineTransition_t8bvo"), "Drift", "Idle", SubResource("AnimationNodeStateMachineTransition_atwf1"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_j27ct"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_bvqm4"), "Jump", "Fall", SubResource("AnimationNodeStateMachineTransition_vqg2s"), "Idle", "Sit", SubResource("AnimationNodeStateMachineTransition_urdo6"), "Fall", "Land", SubResource("AnimationNodeStateMachineTransition_80xrd"), "Land", "Idle", SubResource("AnimationNodeStateMachineTransition_hfcne"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_hngjr"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_3o6dh"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_mwlgo"), "Drift", "Attack", SubResource("AnimationNodeStateMachineTransition_74ftq"), "Attack", "Attack2", SubResource("AnimationNodeStateMachineTransition_0egup"), "Attack2", "Idle", SubResource("AnimationNodeStateMachineTransition_38hdb"), "Attack2", "Attack3", SubResource("AnimationNodeStateMachineTransition_grmfm"), "Attack3", "Idle", SubResource("AnimationNodeStateMachineTransition_vu0i4"), "Rise", "Idle", SubResource("AnimationNodeStateMachineTransition_8tp3d"), "Sit", "Sitting", SubResource("AnimationNodeStateMachineTransition_txfrw"), "Sitting", "Rise", SubResource("AnimationNodeStateMachineTransition_kma0b"), "Sitting", "SitAttack", SubResource("AnimationNodeStateMachineTransition_3mnft"), "SitAttack", "Sitting", SubResource("AnimationNodeStateMachineTransition_xabnw")]
graph_offset = Vector2(-339, 61)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_b7p2d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4vx6"]
size = Vector2(15, 40)

[sub_resource type="GDScript" id="GDScript_0dxf8"]
script/source = "# Sit.gd
extends State

func handle_input(_event: InputEvent) -> void:
	if Input.is_action_just_released(\"ui_down\"):
		state_machine.transition_to(\"Rise\")
	if Input.is_action_just_pressed(\"player_jump\"):
		state_machine.transition_to(\"Jump\")
	if Input.is_action_just_pressed(\"player_attack\"):
		state_machine.transition_to(\"SitAttack\")

# Upon entering the state, we set the Player node's velocity to zero.
func enter(_msg := {}) -> void:
	owner.velocity = Vector2.ZERO

func update(_delta: float) -> void:
	owner.animationState.travel(\"Sit\")

func _finished_sitting():
	state_machine.transition_to(\"Sitting\")
"

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_rtbyy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ek52t")
hframes = 10
vframes = 6
frame = 26

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hluul")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_m0ebo")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_b7p2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_n4vx6")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_vertical_enabled = true
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_vwji7")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_rsswh")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_caqt1")

[node name="Drift" type="Node" parent="StateMachine"]
script = ExtResource("6_4yc7k")

[node name="Sit" type="Node" parent="StateMachine"]
script = SubResource("GDScript_0dxf8")

[node name="Sitting" type="Node" parent="StateMachine"]
script = ExtResource("7_er8qf")

[node name="Rise" type="Node" parent="StateMachine"]
script = ExtResource("8_ixukc")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("9_7ik2k")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("9_iknwe")

[node name="Land" type="Node" parent="StateMachine"]
script = ExtResource("10_k2cgt")

[node name="Attack1" type="Node" parent="StateMachine"]
script = ExtResource("11_xkf3w")

[node name="ComboTimer" type="Timer" parent="StateMachine/Attack1"]
wait_time = 0.1
one_shot = true

[node name="AttackDebounce" type="Timer" parent="StateMachine/Attack1"]
wait_time = 0.35
one_shot = true

[node name="Attack2" type="Node" parent="StateMachine"]
script = ExtResource("12_sceus")

[node name="ComboTimer" type="Timer" parent="StateMachine/Attack2"]
wait_time = 0.1
one_shot = true

[node name="Attack3" type="Node" parent="StateMachine"]
script = ExtResource("13_xyy0k")

[node name="ComboTimer" type="Timer" parent="StateMachine/Attack3"]
wait_time = 0.1
one_shot = true

[node name="SitAttack" type="Node" parent="StateMachine"]
script = ExtResource("14_gq3kd")

[node name="ComboTimer" type="Timer" parent="StateMachine/SitAttack"]
wait_time = 0.1
one_shot = true

[node name="AttackDebounce" type="Timer" parent="StateMachine/SitAttack"]
wait_time = 0.35
one_shot = true
